--- a/MD/C0.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C0.1_DulceJasminVillalobosPerez_Verde.md
@@ -15,7 +15,7 @@ Numero de control | Nombre del integrante | 3 fortalezas tecnológicas | 3 debil
 :-: | :-- | :-- |:--
 17211496 | Acevedo Ensiso Pedro Gabriel  | Arduino. C#. Unity. | HTML. Android Studio. SQL.
 17212176 | Ramirez Cervantes Cesar Manuel  | C#. Blender. SQL.| Unity. HTML. Electrónica.
-17211517 | Venegas Medina Jose Alfredo  | C#. Arduino. SQL Server  | HTML. Blender. Android Studio.
-17212196 | Villalobos Perez Dulce Jasmin  | C#, C++. SQL server. Dreamweaver.|  Arduino. Blender. Unity.
+17211517 | Venegas Medina Jose Alfredo  | C#. Arduino. SQL Server.  | HTML. Blender. Android Studio.
+17212196 | Villalobos Perez Dulce Jasmin  | C# , C++. SQL server. Dreamweaver. |  Arduino. Blender. Unity.
 :imp:
 :house: [Ir a inicio](../docs/D0_Introduccion.md)
