--- a/MD/C1.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.1_DulceJasminVillalobosPerez_Verde.md
@@ -70,7 +70,7 @@ Conceptos de electrónica básica.
 - [K] Motor
 
 <p align="center"> 
-    <img alt="Logo" src="../img/C1.x_SimbolosElectronicos.png" width=550 height=350>    
+    <img alt="Logo" src="../IMG/C1.x_SimbolosElectronicos.png" width=550 height=350>    
 </p>
 
 :house: [Ir a inicio](/docs/D0.1_FundamentosElectronicaBasica.md)
