--- a/MD/C0.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C0.2_DulceJasminVillalobosPerez_Verde.md
@@ -28,7 +28,7 @@
 | 1.2      | ¿Qué es un sistema en tiempo real?                  | Se trata de la implementación de varias tecnologías que juntas logran anticipar los comportamientos del mundo real, ofreciendo un modelo de predicción muy ajustado.           |
 | 1.3      | Mencione que tecnologías envuelven el concepto Industria 4.0    | 1)Fabricación aditiva o impresión 3D. 2)Integración de procesos. 3)Ciberseguridad. 4)Realidad aumentada. 5)Cloud Computing. 6)Robótica. 7)Internet de las cosas. 8.)Big data y análisis de datos. 9)Simulación y prototipado. 10)Cultura. |
 | 1.4      | Referente al tema automatización industria, en que consiste el nivel de campo?     | Nivel de campo o instrumentación. Incluye a todos los dispositivos físicos presentes en la industria, como son elementos de medida o sensores y elementos.           |
-| 1.5      | Elabore un diagrama de capas que muestre la arquitectura de un ecosistema tecnológico para IOT?                       | ![DIAGRAMA](../IMG/DIAGRAMA.drawio.png)|
+| 1.5      | Elabore un diagrama de capas que muestre la arquitectura de un ecosistema tecnológico para IOT?                       | ![DIAGRAMA](../IMG/DIAGRAMA.drawio.png) [VER](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES/blob/SISTEMAS-PROGRAMABLES/IMG/DIAGRAMA.drawio.png)|
 | 1.6      | Que es un sistema de control embebido?               | Se trata de sistemas de control de software que regulan y gestionan dispositivos de hardware. Numéricamente, quizás existen más sistemas embebidos que cualquier otro tipo de sistema. Algunos ejemplos de sistemas embebidos incluyen el software en un teléfono móvil (celular), el software que controla los frenos antibloqueo de un automóvil y el software en un horno de microondas para controlar el proceso de cocinado. |
 | 1.7      | Que tecnologías observa en el video referentes al concepto Industria 4.0?         | La robotica, el uso de robot para la realizacion de trabajo, son capaces de aprender nuevas rutas y facilitan la integracion de procesos            |
 | 1.8      | Basado en el video que ha ofrecido la robótica en la industria?        | Hay robot colavorativos que ayudan a transportar las piezas de repuesto, tambien pueden interactuar con el personal, es muy facil de usar el robot, facilita las tareas, cualquier empleado se puede sentir familarizados con el mundo de los dispositivos.|
@@ -46,5 +46,7 @@
 ![DiagramadeFlujo](../IMG/Flujo.drawio.png)
 
 :house: [Ir a inicio](../docs/D0.1_FundamentosElectronicaBasica.md)
+
+:open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
 
 
