--- a/MD/C1.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.2_DulceJasminVillalobosPerez_Verde.md
@@ -77,6 +77,6 @@ ___
 | Instrucciones | Se cumple con cada uno de los puntos indicados dentro del apartado Instrucciones?            | 20 |
 | Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
 
-:house: [Ir a inicio](/docs/D0.1_FundamentosElectronicaBasica.md)
 
-:open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
+-
+:house: :open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
