--- a/MD/C1.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.1_DulceJasminVillalobosPerez_Verde.md
@@ -73,6 +73,7 @@ Conceptos de electrónica básica.
     <img alt="Logo" src="../IMG/C1.x_SimbolosElectronicos.png" width=550 height=350>    
 </p>
 
-:house: [Ir a inicio](/docs/D0.1_FundamentosElectronicaBasica.md)
+
 -
-:open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
+:house: :open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
+
