--- a/MD/C1.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.2_DulceJasminVillalobosPerez_Verde.md
@@ -79,4 +79,4 @@ ___
 
 
 -
-:house: :open_file_folder: [MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
+:house: :open_file_folder: [ENLACE - MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git)
