--- a/MD/C1.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.3_DulceJasminVillalobosPerez_Verde.md
@@ -4,38 +4,91 @@
 
 Circuito electrónico para uso con sensores y transductores
 
-###:blue_book: Instrucciones
+### :blue_book: Instrucciones
+___
 
 - De acuerdo con la información presentada por el asesor referente al tema sensores y transductores, contestar las preguntas indicadas dentro del apartado desarrollo.
-- Al concluir el reto se deberá subir en formato PDF a la plataforma con la nomenclatura **C1.3_NombreApellido_Equipo.pdf.**
-- Se deberá publicar el reto dentro del repositorio Git personal de cada estudiante, utilizando el estilo MarkDown y el entorno de desarrollo VSCode.
-- Es recomendable crear el repositorio siguiente una estructura tal como:
-```
-|  readme.md
-|  | blog
-|  |  | C0.1_x.md
-|  |  | C0.2_x.md
-|  |  | C1.1_x.md
-|  |  | C1.2_x.md
-|  |  | C1.3_x.md
-|  | img
-|  |  | x.drawio.png
-|  |  | y.drawio.png
-|  |  | z.drawio.png
-|  | docs
-|  |  | A1.1_x.md
-|  |  | A1.2_x.md
+- Toda actividad o reto se deberá realizar utilizando el estilo **MarkDown con extension .md** y el entorno de desarrollo VSCode, debiendo ser elaborado como un documento **single page**, es decir si el documento cuanta con imágenes, enlaces o cualquier documento externo debe ser accedido desde etiquetas y enlaces.
+- Es requisito que el archivo .md contenga una etiqueta del enlace al repositorio de su documento en Github, por ejemplo **Enlace a mi GitHub**
+- Al concluir el reto el reto se deberá subir a github el archivo .md creado.
+- Desde el archivo **.md** se debe exportar un archivo **.pdf** con la nomenclatura **C1.3_NombreAlumno_Equipo.pdf**, el cual deberá subirse a classroom dentro de su apartado correspondiente, para que sirva como evidencia de su entrega; siendo esta plataforma **oficial** aquí se recibirá la calificación de su actividad por individual.
+- Considerando que el archivo .pdf, fue obtenido desde archivo .md, ambos deben ser idénticos y mostrar el mismo contenido.
+- Su repositorio ademas de que debe contar con un archivo **readme**.md dentro de su directorio raíz, con la información como datos del estudiante, equipo de trabajo, materia, carrera, datos del asesor, e incluso logotipo o imágenes, debe tener un apartado de contenidos o indice, los cuales realmente son ligas o **enlaces a sus documentos .md**, _evite utilizar texto_ para indicar enlaces internos o externo.
+- Se propone una estructura tal como esta indicada abajo, sin embargo puede utilizarse cualquier otra que le apoye para organizar su repositorio.
+
+
+```  
+| readme.md
+| | blog
+| | | C0.1_x.md
+| | | C0.2_x.md
+| | | C0.3_x.md
+| | img
+| | docs
+| | | A0.1_x.md
+| | | A0.2_x.md
 ```
 
 ## :pencil2: Desarrollo
 
+___
+
 **Listado de preguntas**
 
 1. Cual es la diferencia entre un sensor y un transductor?
-2. Cuales son los elementos importantes de un sensor?
+    
+    Un sensor es un transductor que se utiliza para medir una variable física de interés. 
+    Un transductor es un dispositivo que transforma un tipo de variable física.
+
+    El sensor esta siempre conectado con la magnitud que la condiciona de la muestra de medida, el transductor es el encargado de convertir la muestra auna señal analogica o digital. 
+
+
+2. Cuales son los elementos importantes de un sensor? 
+    
+   Señal a medir, Elemento sensor, Transductor, Sistema electronico. [VER COMPONENTES](../IMG/COMPONENTES.PNG)
+
+
 3. Que nombre recibe un elemento electrónico en el cual su valor de resistencia es dependiente de la cantidad de luz al que esta expuesto? 
+   
+    Sensor LDR:  Fotorresistencia Sensor De Luz Ldr
+
 4. Calcular el valor de voltaje en Vout dado que R1=750 ohm, R2=100 ohm y Vin= 3.3v
+   
+   VIN | R1 | R2 | VOUT 
+    ------|-------|-------|-------|
+    3.3 v | 750 Ohms | 100 Ohms | 0.388235 V|
 
-![SensoresTransductoresCircuitoVout](/img/C1.x_SensoresTransductoresCircuitoVout.png)
 
-:house: [Ir a sensores](/docs/D1.0_Sensores.md)
+![SensoresTransductoresCircuitoVout](../IMG/C1.x_SensoresTransductoresCircuitoVout.png)
+[VER](/IMG/C1.x_SensoresTransductoresCircuitoVout.png)
+
+1. Que valor de Rango de impedancia se debería tener en R2 para que el rango de valor en Vout sea de 0 a 3.3V si Vin es de 5v y R1=750 ohms? Explique los cálculos realizados para obtener ese valor.
+
+    FORMULA |
+    ----|
+    Vout = (R2 * Vin) / ( R1 +R2 ) |
+    VOUT ( R1 +R2 ) = (R2 * Vin) |
+    (Vout * R1) (Vout * R2) = (R2 * Vin) |
+    Vout * R1  = (VIN * R2) - (VOUT *R2 =)|
+    VOUT * R1 = ( VIN - VOUT ) R2 |
+    R2 = (VOUT * R1 )  /  ( VIN - VOUT )|
+
+
+    VOUT | FORMULA | SUSTITUCION | RESULTADO | R2
+    ----|--------|----------|-----------|-------------------|
+    0 v |   R2 = (VOUT * R1 )  /  ( VIN - VOUT )| R2= (0v * 750Ohms) / (5v - 0v ) | R2= 0/5V | R2= 0 Ohms|
+    2.5 v |  R2 = (VOUT * R1 )  /  ( VIN - VOUT )|R2= (2.5v * 750Ohms) / (5v - 2.5v ) | R2= 1875 / 2.5V | R2= 750 Ohms |
+    3.3 v |  R2 = (VOUT * R1 )  /  ( VIN - VOUT )|  R2= (3.3v * 750Ohms) / (5v - 3.3v ) | R2= 2475 / 1.7 V | R2= 1455.88 Ohms |
+
+___
+
+### :bomb: Rubrica
+
+| Criterios     | Descripción                                                                                  | Puntaje |
+| ------------- | -------------------------------------------------------------------------------------------- | ------- |
+| Instrucciones | Se cumple con cada uno de los puntos indicados dentro del apartado Instrucciones?            | 20 |
+| Desarrollo    | Se respondió a cada uno de los puntos solicitados dentro del desarrollo de la actividad?     | 80      |
+
+
+
+:house: :open_file_folder: [ENLACE - MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git )
