--- a/MD/C1.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.3_DulceJasminVillalobosPerez_Verde.md
@@ -64,14 +64,12 @@ ___
 
 1. Que valor de Rango de impedancia se debería tener en R2 para que el rango de valor en Vout sea de 0 a 3.3V si Vin es de 5v y R1=750 ohms? Explique los cálculos realizados para obtener ese valor.
 
-    FORMULA |
-    ----|
-    Vout = (R2 * Vin) / ( R1 +R2 ) |
-    VOUT ( R1 +R2 ) = (R2 * Vin) |
-    (Vout * R1) (Vout * R2) = (R2 * Vin) |
-    Vout * R1  = (VIN * R2) - (VOUT *R2 =)|
-    VOUT * R1 = ( VIN - VOUT ) R2 |
-    R2 = (VOUT * R1 )  /  ( VIN - VOUT )|
+    FORMULA | DESPEJE  |
+    ----|-------|
+    Vout = (R2 * Vin) / ( R1 +R2 ) |   VOUT ( R1 +R2 ) = (R2 * Vin) |
+    (Vout * R1) (Vout * R2) = (R2 * Vin) |  Vout * R1  = (VIN * R2) - (VOUT *R2 =)|
+    VOUT * R1 = ( VIN - VOUT ) R2 | R2 = (VOUT * R1 )  /  ( VIN - VOUT )|
+
 
 
     VOUT | FORMULA | SUSTITUCION | RESULTADO | R2
