--- a/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
+++ b/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
@@ -45,13 +45,13 @@ Realizar un sensor medidor de luz (lux) a través de un circuito electrónico, u
    Cuando la fotorresistencia se encuentra en ausencia de luz el valor de su resistencia será el "máximo" y conforme aumentan los niveles de luz el valor de su resistencia va disminuyendo.  
 
 <p align="center">
-    <img alt="Logo" src="../img/C1.x_Sensor_FotoresistenciaLDR.png" width=600 height=300>
+    <img alt="Logo" src="../IMG/C1.x_Sensor_FotoresistenciaLDR.png" width=600 height=300>
 </p>
 
 3. Ensamble el circuito que se muestra utilizado el simulador que halla considerado, colocando la fotorresistencia en la posición LDR y resistencia de acuerdo con la imagen del esquemático:
 
     <p align="center"> 
-        <img alt="Logo" src="../img/C1.x_CircuitoSensorFotoresistivo.png" width=300 height=400>
+        <img alt="Logo" src="../IMG/C1.x_CircuitoSensorFotoresistivo.png" width=300 height=400>
     </p>
 4. coloque la imagen finalmente obtenida del circuito ensamblado dentro de su simulador.
 5. Mida la **resistencia** de la fotorresistencia con el ohmetro bajo las siguientes condiciones: ausencia de luz u oscuridad,  luz ambiente, luz intensiva y registre en la tabla correspondiente.
