--- a/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
+++ b/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
@@ -53,7 +53,7 @@ Realizar un sensor medidor de luz (lux) a través de un circuito electrónico, u
     <p align="center"> 
         <img alt="Logo" src="../IMG/C1.x_CircuitoSensorFotoresistivo.png" width=300 height=400>
     </p>
-    
+
 4. coloque la imagen finalmente obtenida del circuito ensamblado dentro de su simulador.
 5. Mida la **resistencia** de la fotorresistencia con el ohmetro bajo las siguientes condiciones: ausencia de luz u oscuridad,  luz ambiente, luz intensiva y registre en la tabla correspondiente.
 6. Calcule el **valor de voltaje Vout teórico** para cada una de las condiciones antes indicadas asi como el valor de voltaje Vout medido  y registre en la tabla correspondiente.
@@ -78,4 +78,4 @@ Realizar un sensor medidor de luz (lux) a través de un circuito electrónico, u
 | Demostración  | El alumno se presenta durante la explicación de la funcionalidad de la actividad?            | 20      |
 | Conclusiones  | Se incluye una opinión personal de la actividad  por cada uno de los integrantes del equipo? | 10      |
 
-:house: [Ir a sensores](../docs/D1.0_Sensores.md)
+:house: :open_file_folder: [ENLACE - MI GITHUB](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES.git )
