--- a/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
+++ b/MD/A1.2_Dulce_Jasmin_Villalobos_Perez_Verde.md
@@ -55,19 +55,24 @@ Realizar un sensor medidor de luz (lux) a través de un circuito electrónico, u
     </p>
 
 4. coloque la imagen finalmente obtenida del circuito ensamblado dentro de su simulador.
-5. Mida la **resistencia** de la fotorresistencia con el ohmetro bajo las siguientes condiciones: ausencia de luz u oscuridad,  luz ambiente, luz intensiva y registre en la tabla correspondiente.
-6. Calcule el **valor de voltaje Vout teórico** para cada una de las condiciones antes indicadas asi como el valor de voltaje Vout medido  y registre en la tabla correspondiente.
-7. Calcule el **valor de exactitud** de voltaje entre lo teórico y lo medido para cada condición  y registre en la tabla correspondiente.
 
-    | Condicion          |  Impedancia en fotoresistencia | Voltaje Vout teórico | Voltaje Vout medido | %  V.Medido/ V.Teórico |
-    | --------------- | ----------------------------- | -------------------- | ------------------- | ---------------------- |
-    | Ausencia de luz |
-    | Luz ambiental   |
-    | Luz intensa     |
+![CIRCUITO](../IMG/VOL.png)
 
-8. **Grafique** a través de los valores registrados en la tabla anterior de tal manera que se pueda observar el comportamiento de la curva del componente LDR e **inserte la grafica**.
-9. Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
-10. Incluya las conclusiones individuales y resultados observados durante el desarrollo de la actividad.
+1. Mida la **resistencia** de la fotorresistencia con el ohmetro bajo las siguientes condiciones: ausencia de luz u oscuridad,  luz ambiente, luz intensiva y registre en la tabla correspondiente.
+2. Calcule el **valor de voltaje Vout teórico** para cada una de las condiciones antes indicadas asi como el valor de voltaje Vout medido  y registre en la tabla correspondiente.
+3. Calcule el **valor de exactitud** de voltaje entre lo teórico y lo medido para cada condición  y registre en la tabla correspondiente.
+
+    | Condicion          |  Impedancia en fotoresistencia | Voltaje Vout teórico | Voltaje Vout medido | %  V.Medido/ V.Teórico | IMG |
+    | --------------- | ----------------------------- | -------------------- | ------------------- | ---------------------- |------|
+    | 1 | Ausencia de luz | 27.6224 mV | 27.7 mV | 1.0028 | [VER](../IMG/VOL.png) |
+    | 2 | Luz ambiental   |  2.6150 V | 2.61 V | 0.9980   | [VER](../IMG/VL2.png) |
+    | 3 | Luz intensa     |  3.3200 V | 3.32 V | 1 | [VER](../IMG/VL3.png) |
+
+4. **Grafique** a través de los valores registrados en la tabla anterior de tal manera que se pueda observar el comportamiento de la curva del componente LDR e **inserte la grafica**.
+5.  Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
+
+![EVIDENCIA](../IMG/EQU.png)
+6.  Incluya las conclusiones individuales y resultados observados durante el desarrollo de la actividad.
 
 ### :bomb: Rubrica
 
