--- a/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
@@ -36,12 +36,13 @@ ___
 
 **Problema a resolver:**
 
-1. Calcular el valor de R1 y R2 que se requiere, para obtener una voltaje de salida de 3.3v, dado que el Voltaje de entrada es de 2.5v? Explique el procedimiento utilizado para realizar el calculo y considere valores comerciales para las resistencias que se considere utilizar.
+1. Calcular el valor de R1 y R2 que se requiere, para obtener una voltaje de salida de 3.3v, dado que el Voltaje de entrada es de 2.5v? Explique el procedimiento utilizado para realizar el calculo y considere valores comerciales para las resistencias que se considere utilizar. [Valores de resistencias](../IMG/VR.png)
 
- DATOS  | FOTMULA   | SUSTITUCION 
+ DATOS  | FORMULA   | SUSTITUCION 
 --------|-------|----------|
 Vout = 3.3 v |  Vout = Vin (1 + R2/R1) |  R2/R1 = (3.3 V/ 2.5 V) -1 
 Vin = 2.5 v | R2/R1 = (Vout/ Vin) -1  |  R2/R1 = 0.32 Ohms 
+
 
     Ri  = 1000  Ohms 
     Rii = 56   Ohms 
@@ -62,9 +63,6 @@ Comprobación |
     Vin = 3.3 V / ( 1 + (0.32Ohms))
     Vin = 3.3 / 1.32 
     Vin = 2.5 V
-
-
-
 
 ![Acondicionador_de_senal_AmOp](../IMG/C1.x_CircuitoAcondicionadorAmOP.png)
 
