--- a/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
@@ -36,7 +36,7 @@ ___
 
 **Problema a resolver:**
 
-1. Calcular el valor de R1 y R2 que se requiere, para obtener una voltaje de salida de 3.3v, dado que el Voltaje de entrada es de 2.5v? Explique el procedimiento utilizado para realizar el calculo y considere valores comerciales para las resistencias que se considere utilizar. [Valores de resistencias](../IMG/VR.png)
+1. Calcular el valor de R1 y R2 que se requiere, para obtener una voltaje de salida de 3.3v, dado que el Voltaje de entrada es de 2.5v? Explique el procedimiento utilizado para realizar el calculo y considere valores comerciales para las resistencias que se considere utilizar. 
 
  DATOS  | FORMULA   | SUSTITUCION 
 --------|-------|----------|
