--- a/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.4_DulceJasminVillalobosPerez_Verde.md
@@ -38,19 +38,38 @@ ___
 
 1. Calcular el valor de R1 y R2 que se requiere, para obtener una voltaje de salida de 3.3v, dado que el Voltaje de entrada es de 2.5v? Explique el procedimiento utilizado para realizar el calculo y considere valores comerciales para las resistencias que se considere utilizar. 
 
+
+Primero despejamos la formula  Vout = Vin (1 + R2/R1) , para poder dar con el volor de las dos resistencias.
+
  DATOS  | FORMULA   | SUSTITUCION 
 --------|-------|----------|
 Vout = 3.3 v |  Vout = Vin (1 + R2/R1) |  R2/R1 = (3.3 V/ 2.5 V) -1 
 Vin = 2.5 v | R2/R1 = (Vout/ Vin) -1  |  R2/R1 = 0.32 Ohms 
 
+Ahora sabemos que el valor de las resistencias es de 0.32 Ohms, que es el valor de R2/R1.
+ 
+Para llegar a un valor más cercano estuve dividiendo y probando con varios valores de resistencias comerciales.
+Una de las que estuvieron más aproximación resultado esperado son 150 Ohms para R2 Y 470 Ohms para R1 
+        
+    R2/R1 = 150 / 470 = 0.319
+
+Otro posible valor es 39 Ohms para R2 y 120 Ohms para R1
+        
+    R2/R1 = 39/120 = 0.32
+
+Para encontrar un valor exacto que cumpla con los valores indicados, podremos utilizar para R2 la suma de dos resistencias en serie con  los valores de Ri= 1000 Ohms y Rii= 56 Ohms 
 
     Ri  = 1000  Ohms 
     Rii = 56   Ohms 
     R2  = Ri + Rii
+Los valores son : 
+
     R2  = 1056 Ohms 
     R1  = 3300 Ohms 
 -------
 Formula : Vout = Vin (1 + R2/R1) 
+
+Para finalizar hacemos la comprobacion con los datos: 
 
 Comprobación |
 ------| 
