--- a/MD/A1.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/A1.3_DulceJasminVillalobosPerez_Verde.md
@@ -49,14 +49,14 @@ ___
 2. Espere a que el asesor le indique que tipo de sensor sera el que desarrollara su equipo y una vez que tenga marque el sensor dentro del punto anterior.
 3. Una vez que conoce el tema a desarrollar, investigue y redacte dentro de este documento los puntos siguiente:
 
-[**Presentacion**](../pdf/A1.3_DulceJasminVillalobosPerez_VerdeP.pdf)
+[**Presentacion**](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES/blob/SISTEMAS-PROGRAMABLES/PDF/A1.3_Dulce_Jasmin_Villalobos_Perez_VerdeP.pdf)
 
-4. Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
+1. Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
 
-![Captura1](../img/Captura1.png)
-![Captura2](../img/Captura2.png)
-![Captura3](../img/Captura3.png)
-![Captura4](../img/Captura4.png)
+![Captura1](../IMG/Captura1.png)
+![Captura2](../IMG/Captura2.png)
+![Captura3](../IMG/Captura3.png)
+![Captura4](../IMG/Captura4.png)
 ___
 
 ### :bomb: Rubrica
