--- a/MD/C1.5_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C1.5_DulceJasminVillalobosPerez_Verde.md
@@ -39,19 +39,19 @@ ___
 
     Usos aplicativos | Tipo de sensor |
     ---------|----------|
-    Temperatura | Termistores, RTD, Termopares|
+    Temperatura | Termistores(PCT,NTC), RTD, Termopares|
     Presencia | Fotoelectricos de barrera o emisor-receptor,  opticos de barrera por reflexion, fotoelectricos difusos.|
-    Distancia | Ultrasonicos, Inductivos, Laser|
-    Presion | Piezorresistivo,  resonantes, termicos o de ionizacion.|
+    Distancia | Capacitivos, Inductivos, Ultrasonicos, Laser|
+    Presion | Tecnologia de galgas extensometricas, Piezorresistivo,  resonantes, termicos o de ionizacion.|
     Iluminacion | De barrera, emisor-receptor, opticos de barrera por reflexion, fotoelectricos|
 
 2. Investigue en caso de considerlo, sobre que tipo de sensores pueden ser utilizados para las siguientes condiciones:
   - Que tipo de sensor se requiere para identificar cuantos televisores están siendo manufacturados en una linea producción? 
        
-      Ultrasonicos o infrarojos.
+      Ultrasonicos o NIR (infrarrojo cercano)
   - Que tipo de sensor se requiere para  detectar cuando una persona entra a un cuarto de seguridad?
       
-      Ultrasonicos o infrarrojos.
+      Ultrasonicos.
   - Que tipo de sensor se requiere para  encender una lampara durante las noches y durante el dia se apague.
       
       Un sensor fotoelectrico. 
@@ -60,8 +60,8 @@ ___
       Un termistor NTC
   - Que tipo de sensor se requiere para conocer cuanto pesa un producto que se esta vendiendo por kilogramos?
 
-      Celdas de carga
-  - Que tipo d      e sensor se requiere para saber a que distancia esta acercándose un objeto a otro para evitar que halla un impacto?
+     Tecnologia de galgas extensometricas
+  - Que tipo de sensor se requiere para saber a que distancia esta acercándose un objeto a otro para evitar que halla un impacto?
 
        Ultrasonicos 
 
