--- a/MD/C2.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C2.1_DulceJasminVillalobosPerez_Verde.md
@@ -35,8 +35,13 @@ Listado de preguntas:
 ![CUADRO SIPNOTICO](../IMG/CS.png)
 1. De acuerdo con el video [descripcion de los actuadores industriales](https://www.youtube.com/watch?v=mFsPxpFHajM) realice una matriz comparativa indicando clasificacion, subclasificacion, principio de funcionamiento, ventajas y desventajas.
 
+![MATRIZ COMPARATIVA](../DWFP/MATRIZ.drawio.png)
+![MATRIZ COMPARATIVA](../DWFP/MATRIZ2.drawio.png)
+![MATRIZ COMPARATIVA](../DWFP/MATRIZ3.drawio.png)
+![MATRIZ COMPARATIVA](../DWFP/MATRIZ4.drawio.png)
 
-2. De acuerdo con el video [Neumática Industrial](https://www.youtube.com/watch?v=Wee85cI6wwQ&t=394s), explique como trabaja un sistema Neumático?
+
+1. De acuerdo con el video [Neumática Industrial](https://www.youtube.com/watch?v=Wee85cI6wwQ&t=394s), explique como trabaja un sistema Neumático?
 
 ### :bomb: Rubrica
 
