--- a/MD/C2.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C2.1_DulceJasminVillalobosPerez_Verde.md
@@ -43,6 +43,17 @@ Listado de preguntas:
 
 1. De acuerdo con el video [Neumática Industrial](https://www.youtube.com/watch?v=Wee85cI6wwQ&t=394s), explique como trabaja un sistema Neumático?
 
+    Como funciona Inicio: El compresor genera la energía que alimenta el sistema en forma de aire comprimido, para generar aire comprimido el compresor aspira aire de su entorno y lo presuriza, creando la energía necesaria para el sistema.
+
+    Una vez comprimido el aire necesita estar seco, para que las partículas dañinas no oxiden las partes móviles, una vez hecho esto el aire viaja por un tubo al siguiente componente el separador de líquidos y preparación de aire (FRL), cuando llega a este paso el separador hace girar el aire para eliminar la humedad, esto es posible gracias a la fuerza centrífuga.
+
+    luego pasa al siguiente filtro para eliminar mejor la humedad gracias a los filtros para atrapar a los contaminantes no deseados, cuando la presión de aire sale del compresor, hace que la presión baja genera menos fuerza para modificar y ajustar un punto de presión deseado, podemos hacerlo desde la perrilla, cuando el aire comprimido está limpio y seco y establecido en la presión correcta para la aplicación, debemos dirigirlo para donde queremos generar movimiento, se usa una válvula de control direccional, ya que puede conecta con unas vías interna que puede conectar el aire que llega al puerto de entrada, dependiendo de la posición del movimiento móvil, para eso se cambian los carretes y esto hace que pueda el aire se dirija por el camino que se desee.
+    
+    Un PLC se encarga de dar la orden a la válvula para cambiarla mediante una señal eléctrica, luego hace que se genere un campo magnético que hace que una rendija se mueva y quita el bloqueo, y deja pasar el aire, dejando el carrete en su posición inicial, y así el PLC podrá dirigir el aire como lo vea necesario.
+    
+    Ahora el aire llega al actuador que se encarga de convertir el aire comprimido en movimiento, utilizando la energía del aire comprimido, cuando el aire comprimido entra hace que el pistón se mueva hacia delante, como el pistón está unido a un vástago que se extenderá por la fuerza generada del aire comprimido, para que el actuador regrese a si posición anterior, entonces con ayuda del la   de control direccional cambiando el como fluye el aire, respecto al puesto de trabajos , cuando el aire comprimido empuja el lado opuesto, expulsa el aire comprimido que estaba de otro lado , a estos se le llama retroacción, el aire que se regresa se llama aire de escape.  Este proceso se puede repetir cuantas veces el PLC indiqué.
+ 
+
 ### :bomb: Rubrica
 
 | Criterios     | Descripción                                                                                  | Puntaje |
