--- a/MD/C2.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C2.2_DulceJasminVillalobosPerez_Verde.md
@@ -25,7 +25,11 @@
 | | | A2.1_x.md
 | | | A2.2_x.md
 ```
+
+
 ## :pencil2: Desarrollo
+
+
 
 Listado de preguntas:
 
@@ -34,18 +38,19 @@ Listado de preguntas:
 
 2. De acuerdo con el video [instalación básica de neumática y arduino](https://www.youtube.com/watch?v=DdvLAXfuNpY&t=8s), cual es el propósito del microcontrolador para este sistema? Que otros componentes electrónicos observa en el video?
 
-        Pues vemos que el Arduino se programa las salidas a 5 volteos, conectamos la salida de 5 volteos de los pines digitales al la tira de relés, una vez de tener el Arduino listo este se encarga de conectar a los relés y transmite esos 5 volteos, convirtiendo así en una salida de 24 V,  por que se necesitan 24 volteos para controlar las electroválvulas, gracias a esto el aire comprimido de la toma de aire hace que se dirija por medios de los conductos al actuador neumático. 
+    Pues vemos que el Arduino se programa las salidas a 5 volteos, conectamos la salida de 5 volteos de los pines digitales al la tira de relés, una vez de tener el Arduino listo este se encarga de conectar a los relés y transmite esos 5 volteos, convirtiendo así en una salida de 24 V,  por que se necesitan 24 volteos para controlar las electroválvulas, gracias a esto el aire comprimido de la toma de aire hace que se dirija por medios de los conductos al actuador neumático. 
 
-        Componentes que se observan son la toma de aire comprimido, el Arduino, la electroválvula, tira de relés, los actuadores como el cilindro de doble efecto, el rollo de pinzas y el sencillo el pistón. 
+    Componentes que se observan son:
+        La toma de aire comprimido, el Arduino, la electroválvula, tira de relés, los actuadores como el cilindro de doble efecto, el rollo de pinzas y el sencillo el pistón. 
 
 
 3. Basandose en el video [Como funciona la impresora 3D](https://www.youtube.com/watch?v=C4HAJ5HLuB4), que tipo de sensores y actuadores están integrados, y con que proposito es utilizado dentro de este sistema de impresión? 
 
-        Funciona con 3 ejes principales, que son movidos por unos pequeños motores, que a su vez son controlados por la electrónica de la impresora. 
-        La zona de extrusor   compuesta por un pequeño ventilador y un disipador de calor qué va unido al motor. 
+    Funciona con 3 ejes principales, que son movidos por unos pequeños motores, que a su vez son controlados por la electrónica de la impresora. 
+    La zona de extrusor   compuesta por un pequeño ventilador y un disipador de calor qué va unido al motor. 
 
-        Tipo de sensores y actuadores están integrados
-        El sensor término qué es usado para identificar qué el filamento qué se introdujo por el  extractor  para qué se derrita.
+    Tipo de sensores y actuadores están integrados  
+        El sensor térmico qué es usado para identificar qué el filamento qué se introdujo por el  extractor  para qué se derrita.
         Los motores de paso a paso podrían ser muy útiles ya qué son más precisos, al igual qué el servomotor qué puede señalar la posición de este.
         Para tener una mayor calidad de la figura es recomendable usar una velocidad baja. También otro tipo sería el de distancia para saber y tomar en cuenta las distancia en la qué se coloca el material. 
 
