--- a/MD/C2.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C2.3_DulceJasminVillalobosPerez_Verde.md
@@ -29,13 +29,57 @@
 ## :pencil2: Desarrollo
 
 1. Investigue que es la modulación por ancho de pulso y para que sirve.
+
+    Es una técnica utilizada para regular la velocidad de giro de los motores eléctricos de inducción o asíncronos. Mantiene el par motor constante y no supone un desaprovechamiento de la energía eléctrica.
+
+    La modulación de ancho de pulso está formada por una señal de onda cuadrada que no siempre tiene la misma relación entre el tiempo que está en alto y el tiempo que está en bajo. 
+
+    El tiempo que la señal se encuentra en nivel alto se denomina tiempo on(Ton), mientras que el tiempo del nivel bajo se le llama tiempo off (Toff).
+
+
 2. Calcule el valor de C y R para obtener un valor de señal de 5 segundos para el siguiente circuito temporizador mono-estable.
-3. Como se podrá observar la imagen anexa corresponde a un circuito temporizador,que terminal se tendría que utilizar para activar el temporizador? Cual terminal se utilizaría si se desea integrar un actuador eléctrico?
-
-    Valor R | Valor C |
+   
+     Valor R | Valor C |
     ---------|----------|
-    ---  | --- |
+    12 Ohms   | 378 mF |
 
+    Ct = 1.1 * R * C
+
+    Sabemos que el resultado esperado es de 5 seg, para ello sustituimos en la fórmula: 
+    
+        Ct= 5 seg 
+        5 seg= 1.1 * R * C
+        5 Seg/ 1.1 = R * C
+        4.54 = R * C
+    Aquí podemos asignar un valor a R o C, yo se lo asigné a R con un valor de la resistencia comercial de 12 Ohms. 
+       
+        C = 4.54 / R
+        C = 4.54 / 12 
+        C = 0.3787 F
+  
+    Para comprobar sustituimos los valores en la fórmula original: 
+
+        Ct = 1.1 * (12 Ohms) * (0.3787 F)
+        Ct = 4.998 Seg
+
+    Los valores son: 
+    - R  = 12 Ohms 
+    - C  = 378 mF
+    - Ct = 4.99 Seg
+
+3. Como se podrá observar la imagen anexa corresponde a un circuito temporizador: 
+   
+   ¿Que terminal se tendría que utilizar para activar el temporizador? 
+        
+        El disparo (Trigger) es la terminal 2.
+
+   ¿Cual terminal se utilizaría si se desea integrar un actuador eléctrico?
+    
+        El output, la terminal 3. 
+
+
+
+  
 <p align="center">
     <img alt="NE555" src="../img/C2.x_CircuitoTemporizadorNE555.png" width=350 height=350>
 </p>
