--- a/MD/C2.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C2.3_DulceJasminVillalobosPerez_Verde.md
@@ -81,7 +81,7 @@
 
   
 <p align="center">
-    <img alt="NE555" src="../img/C2.x_CircuitoTemporizadorNE555.png" width=350 height=350>
+    <img alt="NE555" src="../IMG/C2.x_CircuitoTemporizadorNE555.png" width=350 height=350>
 </p>
 
 
