--- a/MD/A2.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/A2.1_DulceJasminVillalobosPerez_Verde.md
@@ -27,9 +27,9 @@
 2. Espere a que el asesor le indique que tipo de sensor sera el que desarrollara su equipo y una vez que tenga marque el sensor dentro del punto anterior.
 3. Una vez que conoce el tema a desarrollar, investigue y redacte dentro de este documento los puntos siguiente:
 
-[**PRESENTACION**](../PDF/A2.1_EquipoVere.pdf)   
+[**PRESENTACION**](https://github.com/Villalobos39/SISTEMAS-PROGRAMABLES/blob/SISTEMAS-PROGRAMABLES/PDF/A2.1_EquipoVerde.pdf)   
 
-4. Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
+1. Inserte imágenes de **evidencias** tales como son reuniones  de los integrantes del equipo realizadas para el desarrollo de la actividad
 
 ![Evidencia 1](../IMG/A2.1_Captura1.png)  
 ![Evidencia 2](../IMG/A2.1_Captura2.png)  
