--- a/MD/C3.2_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.2_DulceJasminVillalobosPerez_Verde.md
@@ -33,7 +33,7 @@ Arduino y entrada digital, utilizando un push button y una resistencia.
 1. Basado en el siguiente circuito, y utilizando uno de los simuladores propuestos, ensamblar lo que observa.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoEsquematicoEntradaDigital.png" width=650 height=350>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoEsquematicoEntradaDigital.png" width=650 height=350>
 </p>
 
 2. Analice y escriba el programa que se muestra a continuación.
@@ -44,7 +44,7 @@ Arduino y entrada digital, utilizando un push button y una resistencia.
  - Luego tenemos el LOOP, donde se declara una nueva variable, y hacemos uso de la función DIGITALREAD y Serial.PRINTLN, que hacen que imprima un 0,1 dependiendo de si presionan o no el botón, y es cada 1ms, es muy rápido.
  - - Cuando presiono el botón imprime 1, cuando comienza la simulación solo se imprimen puros 0, y así solo imprime 1 cuando lo presiono. 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoProgramaEntradaDigital.png" width=500 height=400>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoProgramaEntradaDigital.png" width=500 height=400>
 </p>
 
 3. Inserte imágenes que considere como evidencias para demostrar el resultado obtenido.
