--- a/MD/C3.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.1_DulceJasminVillalobosPerez_Verde.md
@@ -32,7 +32,7 @@ Arduino IDE y Arduino UNO, utilizando un diodo LED y una resistencia
 1. Basado en el siguiente circuito, y utilizando uno de los simuladores propuestos, ensamblar lo que observa.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoEsquematicoSalidaDigital.png" width=650 height=400>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoEsquematicoSalidaDigital.png" width=650 height=400>
 </p>
 
 2. Analice y escriba el programa que se muestra a continuación.
@@ -44,7 +44,7 @@ Arduino IDE y Arduino UNO, utilizando un diodo LED y una resistencia
 - Finalmente el uso de DELAY detiene la ejecución del programa.
   
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoProgramaSalidaDigital.png" width=600 height=400>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoProgramaSalidaDigital.png" width=600 height=400>
 </p>
 
 3. Explique el resultado observado.
