--- a/MD/C3.3_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.3_DulceJasminVillalobosPerez_Verde.md
@@ -41,8 +41,24 @@ Arduino y entrada análoga, utilizando una resistencia y un sensor LDR
 <p align="center">
     <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoProgramaEntradaAnalogaSensor.png" width=600 height=450>
 </p>
+Explicacion del codigo: 
 
-3. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
+   - Comienza con el SETUP, que como sabemos es el que inicializa las funciones de los modos de trabajo de los pines, dentro de ella vemos la instrucción de Serial.Begin, que abre el puerto serie y fija la velocidad.
+   - Luego tenemos al LOOP que ejecuta las instrucciones que tiene dentro de forma cíclica.
+   - Dentro de este bloque se declararon las variables para el valor del sensor, le la entrada del pin A0, luego se declara a otra variable tipo flota, para la operación donde se convierte la lectura analógica que va de 0 a 1023 para un voltaje de 0 a 5V, esto se obtiene multiplicando el valor de del sensor con el resultado de la división de 5 entre 1023.
+   - Finalmente se imprime el resultado con la función SERIAL.println.
+
+Explicacion de lo que Observo que pasa:
+  -  Antes de comenzar la simulación primero vemos que estamos haciendo uso de fotorresistencia, y con ayuda de este podremos ver la señal qué sale, ya qué sale el voltaje desde el pin de 5 vol así qué puede variar, con una operación se multiplica el valor sensor por la división de 5 entre 1023, y asi obtenemos el valor del votaje y este resultado se ve en el monitor.
+
+
+1. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
+
+
+
+
+![EVIDENCIA](../IMG/EVC3.3.2.png)
+![EVIDENCIA](../IMG/EVC3.3.png)
 
 ### :bomb: Rubrica
 
