--- a/MD/C3.4_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.4_DulceJasminVillalobosPerez_Verde.md
@@ -41,8 +41,25 @@ Arduino, entrada análoga, salida digital y uso de función serial a través de 
 <p align="center">
      <img alt="esquematico" src="../IMG/C3.x_ArduinoProgramaEntradaAnalogaSalidaDigital.png" width=550 height=550>
 </p>
+Explicación del código:
+    
+- Para comenzar se declaran las variables de donde vemos los valores de las entradas donde vemos que las entras son analógicas y la salida digital.
+- La función Setup inicializa, dentro de ella vemos la instrucción de Pinmode, donde se pone el número del pin en este caso es el 9, y el estado es salida. 
+- Luego esta Loop, que ejecuta las instrucciones cíclicamente, a la variable SensorValue se le asigna la lectura del pin analógico A0.
+- Después se envía los resultados con DigitalWrite al pin que se asignó al principio como la salida digital, dependiendo del valor se pone 0 o 1, y esto enciende o apaga el led.
 
-3. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
+Explicación practica:
+- Como vi al conectar todo con las entradas analógicas con el potenciómetro, y de salida en la parte digital, vi que al ponerlo bajo el led se apagaba y encendía más lento, entonces como iba aumentando el valor del potenciómetro el led se apagaba mas rapido mas rapido, parecia que estaba encendido por que no se veia el cambio de estado. 
+
+
+1. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
+
+
+![EVIDENCIA](../IMG/EVC3.4.1.png)
+
+![EVIDENCIA](../IMG/EVC3.4.2.png)
+
+
 
 ### :bomb: Rubrica
 
