--- a/MD/A3.1_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/A3.1_DulceJasminVillalobosPerez_Verde.md
@@ -48,15 +48,15 @@ ___
 
 <p align="center"> 
     <strong>Figura 1 Sensor Ultrasonico</strong>
-    <img alt="Logo" src="../img/C3.x_ArduinoEsquematicoSensorUltrasonico.png"
+    <img alt="Logo" src="../IMG/C3.x_ArduinoEsquematicoSensorUltrasonico.png"
     width=550 height=350>
 </p>
 
-![Captura 1](../img/A3.1_Captura1.png)
+![Captura 1](../IMG/A3.1_Captura1.png)
 
 2. Realice el programa que permita a través de una de las entradas del Arduino, recibir el valor que registra el **Sensor Ultrasonico** al acercarse un objeto a distintas distancias.
 
-![Captura 2](../img/A3.1_Captura2.png)
+![Captura 2](../IMG/A3.1_Captura2.png)
 
 3. Considerando que el sensor ultrasonico tiene un rango mínimo y máximo de detección basado en el tiempo de retorno de la señal sonica, que valores se obtienen en la simulación bajo las **siguientes condiciones:**
 
@@ -70,38 +70,38 @@ ___
 | 6      | 350 cm de distancia al sensor | 0 grados al eje perpendicular del sensor   | No
 
 **1:**
-![Captura 3](../img/A3.1_Captura3.png)  
+![Captura 3](../IMG/A3.1_Captura3.png)  
 
 **2:**
-![Captura 4](../img/A3.1_Captura4.png)  
+![Captura 4](../IMG/A3.1_Captura4.png)  
 
 **3:**
-![Captura 5](../img/A3.1_Captura5.png)  
+![Captura 5](../IMG/A3.1_Captura5.png)  
 
 **4:**
-![Captura 6](../img/A3.1_Captura6.png)  
+![Captura 6](../IMG/A3.1_Captura6.png)  
 
 **5:**
-![Captura 7](../img/A3.1_Captura7.png)  
+![Captura 7](../IMG/A3.1_Captura7.png)  
 
 **6:**
-![Captura 8](../img/A3.1_Captura8.png)  
+![Captura 8](../IMG/A3.1_Captura8.png)  
 
 4. Una vez completados los puntos anteriores, agregue a la Figura 1, **un Display I2C 16x2 LCD**, y coloque la imagen del circuito completado hasta este apartado.  
 
-![Captura 9](../img/A3.1_Captura9.png)  
+![Captura 9](../IMG/A3.1_Captura9.png)  
 
 5. Al haber completado la integración del Display I2C, ajuste el programa que le permita a través del display mostrar el siguiente mensaje, **"Objetivo detectado a ? cm** , y en caso de no lograr la detección indicar el mensaje **"Objetivo fuera de rango"**  
 
-![Captura 10](../img/A3.1_Captura10.png)  
-![Captura 11](../img/A3.1_Captura11.png)
+![Captura 10](../IMG/A3.1_Captura10.png)  
+![Captura 11](../IMG/A3.1_Captura11.png)
 
 6. Coloque aqui evidencias que considere importantes durante el desarrollo de la actividad.
 
-![Evidencia 1](../img/A3.1_Evidencia1.png)  
-![Evidencia 2](../img/A3.1_Evidencia2.png)  
-![Evidencia 3](../img/A3.1_Evidencia3.png)  
-![Evidencia 4](../img/A3.1_Evidencia4.png)
+![Evidencia 1](../IMG/A3.1_Evidencia1.png)  
+![Evidencia 2](../IMG/A3.1_Evidencia2.png)  
+![Evidencia 3](../IMG/A3.1_Evidencia3.png)  
+![Evidencia 4](../IMG/A3.1_Evidencia4.png)
 
 7. Conclusiones:
 - **Acevedo Ensiso Pedro Gabriel:**  
