--- a/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
@@ -54,11 +54,14 @@ Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp3
 
     Estas evidencias son hechas con el simulador.
     
-![Evidencia 1](../IMG/C3.6Evidencia1.png)
-![Evidencia ](../IMG/C3.6_Evidencia.png)
+![Evidencia 1](../IMG/C3.6Evidencia1.PNG)
+![Evidencia ](../IMG/C3.6_Evidencia.PNG)
+
 Con el ponteciometro de va cambiando el valor que se imprime en la grafica , el nivel del voltaje varia, y se imprime la señal analogiaca como se ve en la imagen.
-![Evidencia 2](../IMG/C3.6Evidencia2.png)
-![Evidencia 3](../IMG/C3.6Evidencia3.png)
+
+
+![Evidencia 2](../IMG/C3.6Evidencia2.PNG)
+![Evidencia 3](../IMG/C3.6Evidencia3.PNG)
 ___
 
 ### :bomb: Rubrica
