--- a/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
@@ -62,6 +62,11 @@ Con el ponteciometro de va cambiando el valor que se imprime en la grafica , el 
 
 ![Evidencia 2](../IMG/C3.6Evidencia2.PNG)
 ![Evidencia 3](../IMG/C3.6Evidencia3.PNG)
+
+
+    Esta evidencia fue proporcionada por nuestro compañer.
+
+![Evidencia 6](../IMG/C3.6_Evidencia5.PNG)
 ___
 
 ### :bomb: Rubrica
