--- a/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
@@ -66,7 +66,7 @@ Con el ponteciometro de va cambiando el valor que se imprime en la grafica , el 
 
     Esta evidencia fue proporcionada por nuestro compañer.
 
-![Evidencia 6](../IMG/C3.6_Evidencia5.PNG)
+![Evidencia 6](../IMG/C3.6_Evidencia5.jpg)
 ___
 
 ### :bomb: Rubrica
