--- a/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.6_DulceJasminVillalobosPerez_Verde.md
@@ -64,7 +64,7 @@ Con el ponteciometro de va cambiando el valor que se imprime en la grafica , el 
 ![Evidencia 3](../IMG/C3.6Evidencia3.PNG)
 
 
-    Esta evidencia fue proporcionada por nuestro compañer.
+    Esta evidencia fue proporcionada por nuestro compañero.
 
 ![Evidencia 6](../IMG/C3.6_Evidencia5.jpg)
 ___
