--- a/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
@@ -54,14 +54,26 @@ Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp3
 3. Inserte aquí las imágenes que considere como evidencias para demostrar el resultado obtenido.
 
     Evidencia usando el simulador.
+
+        Para generar señales PWM con un arduino, vi un tutorial para tomarlo como referencia y poder aplicarlo en un arduino en el simulador.
+
 ![Evidencia 1](../IMG/C3.7_Evidencia1.PNG)
-    Para la simulación, se debia encender el led al conectar solo el puerto GPI16 a una pata del Led mientras la otra con una resistenacia a Tierra GND.
+
+
+     Para la simulación, se debia encender el led al conectar solo el puerto GPI16 a una pata del Led mientras la otra con una resistenacia a Tierra GND.
+
+
 ![Evidencia 2](../IMG/C3.7_Evidenci2.PNG)
-    Para simular eso se pone en el codigo los dos for, como en el ejemplo, de forma que usara los valores del pontenciometro, y asi el led se fuera apagando y encendiendo. 
+
+
+        Para simular eso se pone en el codigo los dos for, como en el ejemplo, de forma que usara los valores del pontenciometro, y asi el led se fuera apagando y encendiendo. 
+
+
 ![Evidencia 3](../IMG/C3.7_Evidencia3.PNG)
 
 
-Evidencia proporcionada por el compañero con los componentes: 
+
+    Evidencia proporcionada por el compañero con los componentes: 
 
 ![Evidencia 1](../IMG/C3.7_Evidenci6.jpg)
 ![Evidencia 2](../IMG/C3.7_Evidencia5.png)
