--- a/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.7_DulceJasminVillalobosPerez_Verde.md
@@ -40,13 +40,13 @@ ___
 1. Ensamble el circuito mostrado en la figura siguiente.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoIDE_Esquematico_ESP32_PWM.png" width=650 height=250>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoIDE_Esquematico_ESP32_PWM.png" width=650 height=250>
 </p>
 
 2. Analice y escriba el programa que se muestra a continuación.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoIDE_Programa_ESP32_PWM.png" width=600 height=400>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoIDE_Programa_ESP32_PWM.png" width=600 height=400>
 </p>
 
 Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp32-pwm-arduino-ide/)
