--- a/MD/C3.8_DulceJasminVillalobosPerez_Verde.md
+++ b/MD/C3.8_DulceJasminVillalobosPerez_Verde.md
@@ -37,13 +37,13 @@ Arduino y sensor de tacto integrado al NodeMCU ESP32
 1. Basado en el siguiente circuito y ensamblarlo, utilizando alguno de los simulados propuesto, explicando el resultado que se desea obtener del mismo.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoIDE_Esquematico_ESP32_TouchSensor.png" width=650 height=250>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoIDE_Esquematico_ESP32_TouchSensor.png" width=650 height=250>
 </p>
 
 2. Analice y escriba el programa que se muestra a continuación.
 
 <p align="center">
-    <img alt="SalidaDigital" src="../img/C3.x_ArduinoIDE_Programa_ESP32_TouchSensor.png" width=450 height=500>
+    <img alt="SalidaDigital" src="../IMG/C3.x_ArduinoIDE_Programa_ESP32_TouchSensor.png" width=450 height=500>
 </p>
 
 Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp32-touch-pins-arduino-ide/)
@@ -60,8 +60,8 @@ Fuente de consulta: [Random Nerd Tutorials](https://randomnerdtutorials.com/esp3
 
         En la primera vemos que el led esta encendido y en la pantalla se imprime 
         1 LED ON, en la segunda imagen esta apagado, por lo que el mensaje que imprime es  0 LED OFF.
-        
-         
+
+
 ![Evidencia 3](../IMG/C3.8_Evidencia3.PNG)
 ![Evidencia 4](../IMG/C3.8_Evidencia.PNG)
 
